Kubernetes/day_05/apple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-service
  labels:
    app: apple
spec:
  selector:
    app: apple
  ports:
    - port: 80
      targetPort: 5678
