Kubernetes/day_05/orange-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orange-service
  labels:
    app: orange
spec:
  selector:
    app: orange
  ports:
    - port: 80
      targetPort: 5678
